# PolarAlignment

./: CMakeLists.txt  PolarAlignmentv2.c
examples/: AccelSensor.cpp  CMakeLists.txt  CameraDisplay.c  LCD_1in3_test.c  LCD_Test.h  OLED_1in3_C_test.c
lib/Arducam/: CMakeLists.txt  hm01b0.c
lib/Config/: DEV_Config.c
lib/GUI/: GUI_Paint.c
python/: AccelSensor.py
